layout product slide for shop tabs. Fixed layout issues and bugs

--- a/server/public/assets/styles/stylesheet.css
+++ b/server/public/assets/styles/stylesheet.css
@@ -3,16 +3,26 @@ body {
     margin: 20px;
     
 }
-.container{
-    background-color: red;
+h3 {
+    background-color: #444444;
+    color: #fff;
+    display: block;
+    margin: 0;
+    padding: 5px;
 }
-#profile {
-    background-color: blue;
-}
-#aboutDesc {
-    background-color: green;
-}
+
 #profilePic {
+    width: 100%;
+    float: left;
+}
+.productBucket {
+    background-color: #999999;
+    padding: 0;
+}
+#slideCont {
+    padding: 20px;
+}
+.productImg {
     width: 100%;
     float: left;
 }
